# dash

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  endpoints.yaml  extension_config.cmake  gen_ui_files.py  openapi.yaml  requirements.txt
.cache/clangd/: compile_commands.json
.github/workflows/: MainDistributionPipeline.yml
docs/: UPDATING.md
e2e_tests/: client.py  conftest.py  const.py  test_failed_server_start.py  test_json_compact_all_types.py  test_uploading_files.py  test_with_auth.py
e2e_tests/data/: range.parquet
e2e_tests/responses/: all_types_compact.py  all_types_json.py
e2e_tests/tests/: test_cors.py  test_json_compact_all_types.py  test_uploading_files.py  test_with_auth.py
scripts/: build_ui.py  gen_ui_files.py  install_node_windows.bat  install_npm_linux.sh  install_npm_mac.sh  install_python_linux.sh  install_python_mac.sh  install_python_windows.bat  setup-custom-toolchain.sh
src/: dash_extension.cpp  duck_explorer_extension.cpp  temp_file.cpp
src/include/: auto_cleaner.hpp  dash_extension.hpp  duck_explorer_extension.hpp  execution_request.hpp  files.hpp  http_error_data.hpp  http_server.hpp  json_result_collector.hpp  parse_query.hpp  query_result_json_table_function.hpp  query_result_table_function.hpp  response_format.hpp  result.hpp  result_serializer.hpp  result_serializer_compact_json.hpp  result_table_function.hpp  setup.hpp  string_util.hpp  table_functions.hpp  table_functions_bind_data.hpp  temp_file.hpp  uri.hpp  utils.hpp
src/include/serializer/: result_serializer.hpp  result_serializer_compact_json.hpp  result_serializer_json.hpp
src/serializer/: result_serializer.cpp
test/sql/: dash.test  duck_explorer.test  query_result.test
